--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -11,6 +11,8 @@
     <string name="pwd_empty">密码为空</string>
     <string name="account_empty">用户名为空</string>
     <string name="pwd_new_empty">新密码为空</string>
+    <string name="word_success">发表成功</string>
+    <string name="word_empty">你未输入内容</string>
     <string name="pwd_check_empty">重新输入密码为空</string>
     <string name="name_already_exist">用户已存在</string>
     <string name="register_fail">注册失败</string>
